// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote Default renders correctly 1`] = `
<jest>
  <figure
    class="ecl-blockquote"
  >
    <picture
      class="ecl-picture ecl-blockquote__picture"
    >
      <img
        alt="Image alternative text"
        class="ecl-blockquote__image"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
    </picture>
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
          lang="en"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales, nisl tincidunt hendrerit elementum, purus risus tempus dui, sit amet cursus massa odio non lacus.
        </p>
        <footer
          class="ecl-blockquote__attribution"
        >
          <cite
            class="ecl-blockquote__author"
          >
            Someone
          </cite>
        </footer>
      </blockquote>
    </div>
  </figure>
</jest>
`;

exports[`Blockquote Default renders correctly with extra attributes 1`] = `
<jest>
  <figure
    class="ecl-blockquote"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <picture
      class="ecl-picture ecl-blockquote__picture"
    >
      <img
        alt="Image alternative text"
        class="ecl-blockquote__image"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
    </picture>
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
          lang="en"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales, nisl tincidunt hendrerit elementum, purus risus tempus dui, sit amet cursus massa odio non lacus.
        </p>
        <footer
          class="ecl-blockquote__attribution"
        >
          <cite
            class="ecl-blockquote__author"
          >
            Someone
          </cite>
        </footer>
      </blockquote>
    </div>
  </figure>
</jest>
`;

exports[`Blockquote Default renders correctly with extra class names 1`] = `
<jest>
  <figure
    class="ecl-blockquote custom-class custom-class--test"
  >
    <picture
      class="ecl-picture ecl-blockquote__picture"
    >
      <img
        alt="Image alternative text"
        class="ecl-blockquote__image"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
    </picture>
    <div
      class="ecl-blockquote__body"
    >
      <blockquote
        class="ecl-blockquote__quote"
      >
        <p
          class="ecl-blockquote__citation"
          lang="en"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales, nisl tincidunt hendrerit elementum, purus risus tempus dui, sit amet cursus massa odio non lacus.
        </p>
        <footer
          class="ecl-blockquote__attribution"
        >
          <cite
            class="ecl-blockquote__author"
          >
            Someone
          </cite>
        </footer>
      </blockquote>
    </div>
  </figure>
</jest>
`;
